Update command data for Kia/Stinger

--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -230,6 +230,7 @@ unsupported_commands_by_ecu:
   - 7E2.7EA.2101:KIA_ACCEL_PEDAL_DEPTH,KIA_BRAKES_APPLIED,KIA_BRAKE_LAMP_STATUS,KIA_GEAR_D,KIA_GEAR_N,KIA_GEAR_P,KIA_GEAR_R_V2,KIA_VSS_V2,KIA_VSS_VMCU
   - 7E2.7EA.22E005:KIA_DISCONNECTOR_ACTUATOR_MOTOR_CURRENT,KIA_DISCONNECTOR_DISENGAGE_LAST_TIME,KIA_DISCONNECTOR_END_POINT,KIA_DISCONNECTOR_INVERTER_PWM_DUTY,KIA_DISCONNECTOR_MEET_POINT,KIA_DISCONNECTOR_STROKE_POSITION,KIA_DISCONNECTOR_ZERO_COUNT_OFFSET
   "7E3":
+  - 7E3.7EB.2102:KIA_MOTOR_RPM_2102
   - 7E3.7EB.22E001:KIA_HEAT_SINK_T,KIA_IGN_VOLTAGE,KIA_INVERTER_T,KIA_MOTOR_ACTUAL_TORQUE,KIA_MOTOR_PHASE_CURRENT_RMS,KIA_MOTOR_RPM,KIA_MOTOR_T,KIA_NOMINAL_TORQUE_VALUE
   - 7E3.7EB.22E009:KIA_EOP_ACTUAL_SPEED,KIA_EOP_COMMANDED_SPEED,KIA_EOP_CURRENT_DC,KIA_EOP_CURRENT_IQ,KIA_EWP_ACTUAL_ROTATION_SPEED,KIA_EWP_COMMANDED_ROTATION_SPEED,KIA_EWP_CURRENT_DC,KIA_EWP_VOLTAGE_DC
   "7E4":
@@ -253,5 +254,7 @@ unsupported_commands_by_ecu:
   - 7E5.7ED.22E003:KIA_OBC_CHARGE_MODE_DC_TARGET_CURRENT,KIA_OBC_CHARGE_MODE_DC_TARGET_VOLTAGE
   - 7E5.7ED.22E011:KIA_AUX_BATTERY_CURRENT,KIA_AUX_BATTERY_STATE_OF_CHARGE,KIA_AUX_BATTERY_T,KIA_AUX_BATTERY_VOLTAGE_7E5,KIA_LDC_INPUT_VOLTAGE,KIA_LDC_OUTPUT_CURRENT,KIA_LDC_OUTPUT_VOLTAGE,KIA_LDC_T
   - 7E5.7ED.22E101:KIA_2025_AUX_BATTERY_CURRENT,KIA_2025_AUX_BATTERY_STATE_OF_CHARGE,KIA_2025_AUX_BATTERY_T,KIA_2025_AUX_BATTERY_VOLTAGE,KIA_2025_LDC_INPUT_VOLTAGE,KIA_2025_LDC_OUTPUT_CURRENT,KIA_2025_LDC_OUTPUT_VOLTAGE,KIA_2025_LDC_T
+  "7E6":
+  - 7E6.7EE.2180:KIA_AAT
   "7E7":
   - 7E7.7EF.22C101:KIA_TIRE_FL_SPD,KIA_TIRE_FR_SPD,KIA_TIRE_RL_SPD,KIA_TIRE_RR_SPD
