Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7B3.7BB.220101.yaml
+++ b/tests/test_cases/2020/commands/7B3.7BB.220101.yaml
@@ -6,4 +6,11 @@ test_cases:
   response: |-
     7BB100F620101010000
     7BB2100FFFFFFFFFFFF
-    7BB22FF4EFFFF000000
+    7BB22FF96FFFF000000
+- expected_values:
+    KIA_HVAC_IAT_PASSENGER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_PASSENGER_VENT: 87.5
+  response: |-
+    7BB100F620101010000
+    7BB2100FFFFFFFFFFFF
+    7BB22FFECFFFF000000
