--- a/tests/test_cases/2020/commands/770.778.22BC06.yaml
+++ b/tests/test_cases/2020/commands/770.778.22BC06.yaml
@@ -14,6 +14,11 @@ test_cases:
     KIA_BRAKE_LIGHT: 0
   response: |-
     778100B62BC06B48000
+    778216D00010000AAAA
+- expected_values:
+    KIA_BRAKE_LIGHT: 0
+  response: |-
+    778100B62BC06B48000
     778216D00020000AAAA
 - expected_values:
     KIA_BRAKE_LIGHT: 45
