--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -636,6 +636,23 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E82167012300FAFF27
+    7E822000200FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00001310
+    7E8250E100F0E0000AE
+    7E82601470100007E70
+    7E8270000000091FF0F
+    7E8280000000000E3F0
+    7E82990E3C000000000
+    7E82ACAFA9FF5ADDFAA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E8216701240026001A
     7E822002A00FFFFFFFF
     7E823FFFF0000FFFFFF
