--- a/tests/test_cases/2020/commands/770.778.22BC06.yaml
+++ b/tests/test_cases/2020/commands/770.778.22BC06.yaml
@@ -16,6 +16,11 @@ test_cases:
     778100B62BC06B48000
     778216D00020000AAAA
 - expected_values:
+    KIA_BRAKE_LIGHT: 44
+  response: |-
+    778100B62BC06B48000
+    778216D2C010080AAAA
+- expected_values:
     KIA_BRAKE_LIGHT: 45
   response: |-
     778100B62BC06B48000
