--- a/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
@@ -101,6 +101,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 85
+    KIA_BRAKE_PEDAL: 241
+    KIA_COMMANDED_GEAR: 1
+    KIA_CURRENT_GEAR: 1
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED: 49
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 590
+    KIA_TORQUE_CONVERTER_SLIP: 479
+    KIA_TURBINE_SPEED: 108
+    KIA_VSS_7E1: 1
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E92100093801000001
+    7E922B000C47D08E10F
+    7E9237CC210080101FF
+    7E924F1C03F00CE3000
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 49
     KIA_BRAKE_PEDAL: 241
     KIA_COMMANDED_GEAR: 1
