Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -347,6 +347,23 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E82167010100010010
+    7E822001000FBFBFBFB
+    7E823FBFB0000FFFFFF
+    7E824FFFFFF00001115
+    7E8251416130F000017
+    7E82601970100007E70
+    7E8270000000033001A
+    7E8280000000000DFF0
+    7E82976E0C000000000
+    7E82AE6F715F47BDEAA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E821670101005D00F3
     7E822FF6B00FFFFFFFF
     7E823FFFF0000FFFFFF
