Update command data for Kia/Stinger

--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -50,6 +50,7 @@ supported_commands_by_ecu:
   - 0157:STSO2FT2
   - 0158:LGSO2FT2
   - 0159:FRP_ABS
+  - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 7E0.7E8.22E001:KIA_EIT,KIA_EOT,KIA_IAT
   - 7E0.7E8.22E004:KIA_22E004,KIA_AUX_SOC,KIA_AUX_SOH
   - 7E0.7E8.22E00A:KIA_KNOCK_LEARN_1,KIA_KNOCK_LEARN_2,KIA_KNOCK_LEARN_3,KIA_KNOCK_LEARN_4,KIA_KNOCK_RETARD_1,KIA_KNOCK_RETARD_2,KIA_KNOCK_RETARD_3,KIA_KNOCK_RETARD_4
