Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -751,6 +751,23 @@ test_cases:
 - expected_values:
     KIA_KNOCK_RETARD_1_E019: 0
     KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: -3
+    KIA_KNOCK_RETARD_4_E019: -2.25
+  response: |-
+    7E8104B62E019FFE7E7
+    7E82167012100210013
+    7E822001300FBFBF7F5
+    7E823F9F20000FFFFFB
+    7E824FCFEF900001215
+    7E8251715151000009E
+    7E82601730100007E70
+    7E827000000001C0014
+    7E828000000000020F0
+    7E82961E4C000000000
+    7E82A1BFA0EF5F3DEAA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
     KIA_KNOCK_RETARD_3_E019: 0
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
