--- a/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,21 +1,38 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
-    KIA_HVAC_AAT: -0.5
-    KIA_HVAC_EVAPORATOR_T: 2.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 65
+    KIA_HVAC_AAT: -5.5
+    KIA_HVAC_EVAPORATOR_T: -0.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 80
+    KIA_HVAC_IAT: -3
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
+    KIA_TEMP_EXT: -5.5
+    KIA_TEMP_INT: -3
+    KIA_VSS: 0
+  response: |-
+    7BB10256201007F901E
+    7BB2168FF4A454F00EF
+    7BB22EF00EFFFFF0FFF
+    7BB23FFFFFFFFFFFF11
+    7BB2494502EFFFF0056
+    7BB25FF00FF00000000
+- expected_values:
+    KIA_HVAC_AAT: -5.5
+    KIA_HVAC_EVAPORATOR_T: -1.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 80
     KIA_HVAC_IAT: 0
     KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
     KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -0.5
+    KIA_TEMP_EXT: -5.5
     KIA_TEMP_INT: 0
     KIA_VSS: 0
   response: |-
     7BB10256201007F901E
-    7BB2168FF504F5502EF
-    7BB229802EFFFFF0FFF
-    7BB23FFFFFFFFFFFFC2
-    7BB249441C8FFFF0077
+    7BB2168FF50454D00EF
+    7BB229800EFFFFF0FFF
+    7BB23FFFFFFFFFFFFC3
+    7BB249450A2FFFF007C
     7BB25FF00FF00000000
 - expected_values:
     KIA_HVAC_AAT: 0.5
