--- a/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
@@ -1,6 +1,26 @@
 command_id: 7E1.7E9.2201A0
 test_cases:
 - expected_values:
+    KIA_ATF_T_V2: 50
+    KIA_BRAKE_PEDAL: 240
+    KIA_COMMANDED_GEAR: 1
+    KIA_CURRENT_GEAR: 0
+    KIA_GEAR_V2: 11
+    KIA_OUTPUT_SPEED: 0
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 0
+    KIA_TORQUE_CONVERTER_SLIP: 0
+    KIA_TURBINE_SPEED: 0
+    KIA_VSS_7E1: 0
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E92100000000000000
+    7E9220000005A000008
+    7E92300B6000B0001FF
+    7E924F0C03F002CD100
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 62
     KIA_BRAKE_PEDAL: 240
     KIA_COMMANDED_GEAR: 1
