--- a/tests/test_cases/2020/commands/7B3.7BB.220101.yaml
+++ b/tests/test_cases/2020/commands/7B3.7BB.220101.yaml
@@ -41,6 +41,13 @@ test_cases:
   response: |-
     7BB100F620101010000
     7BB2100FFFFFFFFFFFF
+    7BB22FFEDFFFF000000
+- expected_values:
+    KIA_HVAC_IAT_PASSENGER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_PASSENGER_VENT: 87.5
+  response: |-
+    7BB100F620101010000
+    7BB2100FFFFFFFFFFFF
     7BB22FFEEFFFF000000
 - expected_values:
     KIA_HVAC_IAT_PASSENGER_LEGS_VENT: 87.5
