--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -902,6 +902,23 @@ test_cases:
     7E82918E0C000000000
     7E82A42F9F8F5E9DFAA
 - expected_values:
+    KIA_KNOCK_RETARD_1_E019: -1.5
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: -5.25
+    KIA_KNOCK_RETARD_4_E019: -1.5
+  response: |-
+    7E8104B62E019FFE7E7
+    7E82167014F00500064
+    7E822006400F9FBF3F9
+    7E823F6F60000FDFFF8
+    7E824FDFAFA00000D0B
+    7E8250F0C0F09000078
+    7E82601980100007E70
+    7E827000000006B0016
+    7E82800000000002CF2
+    7E82965E3C000000000
+    7E82ABEFA9DF4CEDEAA
+- expected_values:
     KIA_KNOCK_RETARD_1_E019: 0
     KIA_KNOCK_RETARD_2_E019: -1.5
     KIA_KNOCK_RETARD_3_E019: -4.5
