Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -732,6 +732,23 @@ test_cases:
     7E829A2DFC000000000
     7E82A09F5FDF155DDAA
 - expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
+    7E82167011B002F0028
+    7E822004D00FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00000D0A
+    7E8250D090B090000EC
+    7E826006B0100007E70
+    7E827000000007D000E
+    7E828000000000049F0
+    7E82987E2C000000000
+    7E82A7EF932F58CDFAA
+- expected_values:
     KIA_KNOCK_RETARD_1_E019: -0.75
     KIA_KNOCK_RETARD_2_E019: -1.5
     KIA_KNOCK_RETARD_3_E019: -1.5
