Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -481,6 +481,18 @@ test_cases:
     7E825D9015F872BF1FC
     7E8266056111CAAAAAA
 - expected_values:
+    KIA_EIT: 4.5
+    KIA_EOT: 11.25148
+    KIA_IAT: 4.50131
+  response: |-
+    7E8102D62E0019FB7FF
+    7E82100D2CF3CF41588
+    7E82200000000CD0028
+    7E8233780311E000015
+    7E8240257FE03390000
+    7E8259C02464F197DFF
+    7E826002B850BAAAAAA
+- expected_values:
     KIA_EIT: 57
     KIA_EOT: 84.0033
     KIA_IAT: 57.00263
