--- a/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
@@ -2,15 +2,15 @@ command_id: 7E1.7E9.2201A0
 test_cases:
 - expected_values:
     KIA_ATF_T_V2: 50
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 0
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 0
     KIA_GEAR_V2: 11
-    KIA_OUTPUT_SPEED: 0
+    KIA_OUTPUT_SPEED_V2: 0
     KIA_REL_APP: 0
     KIA_RPM_V2: 0
-    KIA_TORQUE_CONVERTER_SLIP: 0
-    KIA_TURBINE_SPEED: 0
+    KIA_TORQUE_CONVERTER_SLIP_V2: 0
+    KIA_TURBINE_SPEED_V2: 0
     KIA_VSS_7E1: 0
   response: |-
     7E9102A6201A0FFFFC0
@@ -22,15 +22,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 62
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 0
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 0
     KIA_GEAR_V2: 11
-    KIA_OUTPUT_SPEED: 0
+    KIA_OUTPUT_SPEED_V2: 0
     KIA_REL_APP: 0
     KIA_RPM_V2: 0
-    KIA_TORQUE_CONVERTER_SLIP: 0
-    KIA_TURBINE_SPEED: 0
+    KIA_TORQUE_CONVERTER_SLIP_V2: 0
+    KIA_TURBINE_SPEED_V2: 0
     KIA_VSS_7E1: 0
   response: |-
     7E9102A6201A0FFFFC0
@@ -42,15 +42,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 75
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 0
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 0
     KIA_GEAR_V2: 11
-    KIA_OUTPUT_SPEED: 0
+    KIA_OUTPUT_SPEED_V2: 0
     KIA_REL_APP: 0
     KIA_RPM_V2: 0
-    KIA_TORQUE_CONVERTER_SLIP: 0
-    KIA_TURBINE_SPEED: 0
+    KIA_TORQUE_CONVERTER_SLIP_V2: 0
+    KIA_TURBINE_SPEED_V2: 0
     KIA_VSS_7E1: 0
   response: |-
     7E9102A6201A0FFFFC0
@@ -62,15 +62,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 51
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 5
-    KIA_CURRENT_GEAR: 0
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 5
+    KIA_CURRENT_GEAR_V2: 0
     KIA_GEAR_V2: 11
-    KIA_OUTPUT_SPEED: 0
+    KIA_OUTPUT_SPEED_V2: 0
     KIA_REL_APP: 0
     KIA_RPM_V2: 140
-    KIA_TORQUE_CONVERTER_SLIP: 76
-    KIA_TURBINE_SPEED: 70
+    KIA_TORQUE_CONVERTER_SLIP_V2: 76
+    KIA_TURBINE_SPEED_V2: 70
     KIA_VSS_7E1: 0
   response: |-
     7E9102A6201A0FFFFC0
@@ -82,15 +82,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 73
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 0
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 0
     KIA_GEAR_V2: 9
-    KIA_OUTPUT_SPEED: 0
+    KIA_OUTPUT_SPEED_V2: 0
     KIA_REL_APP: 0
     KIA_RPM_V2: 536
-    KIA_TORQUE_CONVERTER_SLIP: 60
-    KIA_TURBINE_SPEED: 487
+    KIA_TORQUE_CONVERTER_SLIP_V2: 60
+    KIA_TURBINE_SPEED_V2: 487
     KIA_VSS_7E1: 0
   response: |-
     7E9102A6201A0FFFFC0
@@ -102,15 +102,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 50
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 1
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 1
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 0
+    KIA_OUTPUT_SPEED_V2: 0
     KIA_REL_APP: 0
     KIA_RPM_V2: 563
-    KIA_TORQUE_CONVERTER_SLIP: 563
-    KIA_TURBINE_SPEED: 0
+    KIA_TORQUE_CONVERTER_SLIP_V2: 563
+    KIA_TURBINE_SPEED_V2: 0
     KIA_VSS_7E1: 0
   response: |-
     7E9102A6201A0FFFFC0
@@ -122,15 +122,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 75
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 14
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 14
     KIA_GEAR_V2: 10
-    KIA_OUTPUT_SPEED: 62
+    KIA_OUTPUT_SPEED_V2: 62
     KIA_REL_APP: 0
     KIA_RPM_V2: 568
-    KIA_TORQUE_CONVERTER_SLIP: 425
-    KIA_TURBINE_SPEED: 144
+    KIA_TORQUE_CONVERTER_SLIP_V2: 425
+    KIA_TURBINE_SPEED_V2: 144
     KIA_VSS_7E1: 2
   response: |-
     7E9102A6201A0FFFFC0
@@ -142,15 +142,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 71
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 1
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 1
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 0
+    KIA_OUTPUT_SPEED_V2: 0
     KIA_REL_APP: 0
     KIA_RPM_V2: 575
-    KIA_TORQUE_CONVERTER_SLIP: 575
-    KIA_TURBINE_SPEED: 0
+    KIA_TORQUE_CONVERTER_SLIP_V2: 575
+    KIA_TURBINE_SPEED_V2: 0
     KIA_VSS_7E1: 0
   response: |-
     7E9102A6201A0FFFFC0
@@ -162,15 +162,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 55
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 1
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 1
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 0
+    KIA_OUTPUT_SPEED_V2: 0
     KIA_REL_APP: 0
     KIA_RPM_V2: 580
-    KIA_TORQUE_CONVERTER_SLIP: 580
-    KIA_TURBINE_SPEED: 0
+    KIA_TORQUE_CONVERTER_SLIP_V2: 580
+    KIA_TURBINE_SPEED_V2: 0
     KIA_VSS_7E1: 0
   response: |-
     7E9102A6201A0FFFFC0
@@ -182,15 +182,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 85
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 1
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 1
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 49
+    KIA_OUTPUT_SPEED_V2: 49
     KIA_REL_APP: 0
     KIA_RPM_V2: 590
-    KIA_TORQUE_CONVERTER_SLIP: 479
-    KIA_TURBINE_SPEED: 108
+    KIA_TORQUE_CONVERTER_SLIP_V2: 479
+    KIA_TURBINE_SPEED_V2: 108
     KIA_VSS_7E1: 1
   response: |-
     7E9102A6201A0FFFFC0
@@ -202,15 +202,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 67
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 1
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 1
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 34
+    KIA_OUTPUT_SPEED_V2: 34
     KIA_REL_APP: 0
     KIA_RPM_V2: 610
-    KIA_TORQUE_CONVERTER_SLIP: 484
-    KIA_TURBINE_SPEED: 127
+    KIA_TORQUE_CONVERTER_SLIP_V2: 484
+    KIA_TURBINE_SPEED_V2: 127
     KIA_VSS_7E1: 1
   response: |-
     7E9102A6201A0FFFFC0
@@ -222,15 +222,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 102
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 0
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 0
     KIA_GEAR_V2: 11
-    KIA_OUTPUT_SPEED: 0
+    KIA_OUTPUT_SPEED_V2: 0
     KIA_REL_APP: 0
     KIA_RPM_V2: 634
-    KIA_TORQUE_CONVERTER_SLIP: 19
-    KIA_TURBINE_SPEED: 616
+    KIA_TORQUE_CONVERTER_SLIP_V2: 19
+    KIA_TURBINE_SPEED_V2: 616
     KIA_VSS_7E1: 0
   response: |-
     7E9102A6201A0FFFFC0
@@ -242,15 +242,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 73
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 1
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 1
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 63
+    KIA_OUTPUT_SPEED_V2: 63
     KIA_REL_APP: 0
     KIA_RPM_V2: 655
-    KIA_TORQUE_CONVERTER_SLIP: 421
-    KIA_TURBINE_SPEED: 233
+    KIA_TORQUE_CONVERTER_SLIP_V2: 421
+    KIA_TURBINE_SPEED_V2: 233
     KIA_VSS_7E1: 2
   response: |-
     7E9102A6201A0FFFFC0
@@ -262,15 +262,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 78
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 19
-    KIA_CURRENT_GEAR: 5
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 19
+    KIA_CURRENT_GEAR_V2: 5
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 973
+    KIA_OUTPUT_SPEED_V2: 973
     KIA_REL_APP: 0
     KIA_RPM_V2: 846
-    KIA_TORQUE_CONVERTER_SLIP: -133
-    KIA_TURBINE_SPEED: 982
+    KIA_TORQUE_CONVERTER_SLIP_V2: -133
+    KIA_TURBINE_SPEED_V2: 982
     KIA_VSS_7E1: 34
   response: |-
     7E9102A6201A0FFFFC0
@@ -282,15 +282,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 58
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 2
-    KIA_CURRENT_GEAR: 3
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 2
+    KIA_CURRENT_GEAR_V2: 3
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 470
+    KIA_OUTPUT_SPEED_V2: 470
     KIA_REL_APP: 0
     KIA_RPM_V2: 885
-    KIA_TORQUE_CONVERTER_SLIP: -216
-    KIA_TURBINE_SPEED: 1109
+    KIA_TORQUE_CONVERTER_SLIP_V2: -216
+    KIA_TURBINE_SPEED_V2: 1109
     KIA_VSS_7E1: 16
   response: |-
     7E9102A6201A0FFFFC0
@@ -302,15 +302,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 77
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 19
-    KIA_CURRENT_GEAR: 4
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 19
+    KIA_CURRENT_GEAR_V2: 4
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 682
+    KIA_OUTPUT_SPEED_V2: 682
     KIA_REL_APP: 0
     KIA_RPM_V2: 1020
-    KIA_TORQUE_CONVERTER_SLIP: -52
-    KIA_TURBINE_SPEED: 1077
+    KIA_TORQUE_CONVERTER_SLIP_V2: -52
+    KIA_TURBINE_SPEED_V2: 1077
     KIA_VSS_7E1: 24
   response: |-
     7E9102A6201A0FFFFC0
@@ -322,15 +322,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 20
-    KIA_BRAKE_PEDAL: 241
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 0
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 0
     KIA_GEAR_V2: 11
-    KIA_OUTPUT_SPEED: 0
+    KIA_OUTPUT_SPEED_V2: 0
     KIA_REL_APP: 0
     KIA_RPM_V2: 1105
-    KIA_TORQUE_CONVERTER_SLIP: 16
-    KIA_TURBINE_SPEED: 1087
+    KIA_TORQUE_CONVERTER_SLIP_V2: 16
+    KIA_TURBINE_SPEED_V2: 1087
     KIA_VSS_7E1: 0
   response: |-
     7E9102A6201A0FFFFC0
@@ -342,15 +342,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 56
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 24
-    KIA_CURRENT_GEAR: 8
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 24
+    KIA_CURRENT_GEAR_V2: 8
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 2096
+    KIA_OUTPUT_SPEED_V2: 2096
     KIA_REL_APP: 0
     KIA_RPM_V2: 1132
-    KIA_TORQUE_CONVERTER_SLIP: -37
-    KIA_TURBINE_SPEED: 1170
+    KIA_TORQUE_CONVERTER_SLIP_V2: -37
+    KIA_TURBINE_SPEED_V2: 1170
     KIA_VSS_7E1: 75
   response: |-
     7E9102A6201A0FFFFC0
@@ -362,15 +362,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 56
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 1
-    KIA_CURRENT_GEAR: 14
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 14
     KIA_GEAR_V2: 10
-    KIA_OUTPUT_SPEED: 47
+    KIA_OUTPUT_SPEED_V2: 47
     KIA_REL_APP: 24.70588
     KIA_RPM_V2: 1421
-    KIA_TORQUE_CONVERTER_SLIP: 1314
-    KIA_TURBINE_SPEED: 109
+    KIA_TORQUE_CONVERTER_SLIP_V2: 1314
+    KIA_TURBINE_SPEED_V2: 109
     KIA_VSS_7E1: 1
   response: |-
     7E9102A6201A0FFFFC0
@@ -382,15 +382,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 75
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 19
-    KIA_CURRENT_GEAR: 3
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 19
+    KIA_CURRENT_GEAR_V2: 3
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 956
+    KIA_OUTPUT_SPEED_V2: 956
     KIA_REL_APP: 51.37255
     KIA_RPM_V2: 1687
-    KIA_TORQUE_CONVERTER_SLIP: 148
-    KIA_TURBINE_SPEED: 1545
+    KIA_TORQUE_CONVERTER_SLIP_V2: 148
+    KIA_TURBINE_SPEED_V2: 1545
     KIA_VSS_7E1: 34
   response: |-
     7E9102A6201A0FFFFC0
@@ -402,15 +402,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 63
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 22
-    KIA_CURRENT_GEAR: 6
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 22
+    KIA_CURRENT_GEAR_V2: 6
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 1877
+    KIA_OUTPUT_SPEED_V2: 1877
     KIA_REL_APP: 36.07843
     KIA_RPM_V2: 1735
-    KIA_TORQUE_CONVERTER_SLIP: 184
-    KIA_TURBINE_SPEED: 1550
+    KIA_TORQUE_CONVERTER_SLIP_V2: 184
+    KIA_TURBINE_SPEED_V2: 1550
     KIA_VSS_7E1: 67
   response: |-
     7E9102A6201A0FFFFC0
@@ -422,15 +422,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 27
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 21
-    KIA_CURRENT_GEAR: 6
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 21
+    KIA_CURRENT_GEAR_V2: 6
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 1775
+    KIA_OUTPUT_SPEED_V2: 1775
     KIA_REL_APP: 58.03922
     KIA_RPM_V2: 1839
-    KIA_TORQUE_CONVERTER_SLIP: 233
-    KIA_TURBINE_SPEED: 1618
+    KIA_TORQUE_CONVERTER_SLIP_V2: 233
+    KIA_TURBINE_SPEED_V2: 1618
     KIA_VSS_7E1: 63
   response: |-
     7E9102A6201A0FFFFC0
@@ -442,15 +442,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 69
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 24
-    KIA_CURRENT_GEAR: 8
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 24
+    KIA_CURRENT_GEAR_V2: 8
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 3579
+    KIA_OUTPUT_SPEED_V2: 3579
     KIA_REL_APP: 0
     KIA_RPM_V2: 1975
-    KIA_TORQUE_CONVERTER_SLIP: -15
-    KIA_TURBINE_SPEED: 1991
+    KIA_TORQUE_CONVERTER_SLIP_V2: -15
+    KIA_TURBINE_SPEED_V2: 1991
     KIA_VSS_7E1: 128
   response: |-
     7E9102A6201A0FFFFC0
@@ -462,15 +462,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 79
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 21
-    KIA_CURRENT_GEAR: 4
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 21
+    KIA_CURRENT_GEAR_V2: 4
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 1907
+    KIA_OUTPUT_SPEED_V2: 1907
     KIA_REL_APP: 22.35294
     KIA_RPM_V2: 2049
-    KIA_TORQUE_CONVERTER_SLIP: 99
-    KIA_TURBINE_SPEED: 1941
+    KIA_TORQUE_CONVERTER_SLIP_V2: 99
+    KIA_TURBINE_SPEED_V2: 1941
     KIA_VSS_7E1: 68
   response: |-
     7E9102A6201A0FFFFC0
@@ -482,15 +482,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 76
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 24
-    KIA_CURRENT_GEAR: 8
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 24
+    KIA_CURRENT_GEAR_V2: 8
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 3865
+    KIA_OUTPUT_SPEED_V2: 3865
     KIA_REL_APP: 19.60784
     KIA_RPM_V2: 2149
-    KIA_TORQUE_CONVERTER_SLIP: -2
-    KIA_TURBINE_SPEED: 2151
+    KIA_TORQUE_CONVERTER_SLIP_V2: -2
+    KIA_TURBINE_SPEED_V2: 2151
     KIA_VSS_7E1: 138
   response: |-
     7E9102A6201A0FFFFC0
@@ -502,15 +502,15 @@ test_cases:
     7E92600AAAAAAAAAAAA
 - expected_values:
     KIA_ATF_T_V2: 53
-    KIA_BRAKE_PEDAL: 240
-    KIA_COMMANDED_GEAR: 21
-    KIA_CURRENT_GEAR: 4
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 21
+    KIA_CURRENT_GEAR_V2: 4
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED: 1834
+    KIA_OUTPUT_SPEED_V2: 1834
     KIA_REL_APP: 30.98039
     KIA_RPM_V2: 2171
-    KIA_TORQUE_CONVERTER_SLIP: 65
-    KIA_TURBINE_SPEED: 2086
+    KIA_TORQUE_CONVERTER_SLIP_V2: 65
+    KIA_TURBINE_SPEED_V2: 2086
     KIA_VSS_7E1: 65
   response: |-
     7E9102A6201A0FFFFC0
