--- a/tests/test_cases/2018/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2018/commands/7C6.7CE.22B002|fc=1.yaml
@@ -3,6 +3,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 12.65625
     KIA_FLI_VOL: 10
+    KIA_FLI_VOL_THIRDGEN: 5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 64818
     KIA_VPWR: 12.65625
@@ -13,6 +14,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 14.14062
     KIA_FLI_VOL: 13
+    KIA_FLI_VOL_THIRDGEN: 6.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 65308
     KIA_VPWR: 14.14062
@@ -23,6 +25,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.67188
     KIA_FLI_VOL: 14
+    KIA_FLI_VOL_THIRDGEN: 7
     KIA_ODO_KM: 0
     KIA_ODO_MI: 64822
     KIA_VPWR: 13.67188
@@ -33,6 +36,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 12.5
     KIA_FLI_VOL: 16
+    KIA_FLI_VOL_THIRDGEN: 8
     KIA_ODO_KM: 0
     KIA_ODO_MI: 64813
     KIA_VPWR: 12.5
@@ -43,6 +47,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.90625
     KIA_FLI_VOL: 16
+    KIA_FLI_VOL_THIRDGEN: 8
     KIA_ODO_KM: 0
     KIA_ODO_MI: 64806
     KIA_VPWR: 13.90625
@@ -53,6 +58,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 14.21875
     KIA_FLI_VOL: 24
+    KIA_FLI_VOL_THIRDGEN: 12
     KIA_ODO_KM: 0
     KIA_ODO_MI: 66253
     KIA_VPWR: 14.21875
@@ -63,6 +69,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 14.14062
     KIA_FLI_VOL: 29
+    KIA_FLI_VOL_THIRDGEN: 14.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 63231
     KIA_VPWR: 14.14062
@@ -73,6 +80,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 14.14062
     KIA_FLI_VOL: 29
+    KIA_FLI_VOL_THIRDGEN: 14.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 63232
     KIA_VPWR: 14.14062
@@ -83,6 +91,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 14.21875
     KIA_FLI_VOL: 30
+    KIA_FLI_VOL_THIRDGEN: 15
     KIA_ODO_KM: 0
     KIA_ODO_MI: 65557
     KIA_VPWR: 14.21875
@@ -93,6 +102,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 14.0625
     KIA_FLI_VOL: 31
+    KIA_FLI_VOL_THIRDGEN: 15.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 64780
     KIA_VPWR: 14.0625
@@ -103,6 +113,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 12.26562
     KIA_FLI_VOL: 32
+    KIA_FLI_VOL_THIRDGEN: 16
     KIA_ODO_KM: 0
     KIA_ODO_MI: 63160
     KIA_VPWR: 12.26562
@@ -113,6 +124,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 12.26562
     KIA_FLI_VOL: 255
+    KIA_FLI_VOL_THIRDGEN: 127.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 64780
     KIA_VPWR: 12.26562
