--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -13,7 +13,7 @@ supported_commands_by_ecu:
   "7B3":
   - 7B3.7BB.220100|fc=1:KIA_HVAC_AAT,KIA_HVAC_EVAPORATOR_T,KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER,KIA_HVAC_IAT,KIA_HVAC_IAT_DRIVER_LEGS_VENT,KIA_HVAC_IAT_DRIVER_VENT,KIA_TEMP_EXT,KIA_TEMP_INT,KIA_VSS
   "7C6":
-  - 7C6.7CE.22B002|fc=1:KIA_CLUSTER_VOLTAGE,KIA_FLI_VOL,KIA_ODO_KM,KIA_ODO_MI,KIA_VPWR
+  - 7C6.7CE.22B002|fc=1:KIA_CLUSTER_VOLTAGE,KIA_FLI_VOL,KIA_FLI_VOL_THIRDGEN,KIA_ODO_KM,KIA_ODO_MI,KIA_VPWR
   "7D4":
   - 7D4.7DC.220101:KIA_BMS_CHG_PWR,KIA_BMS_DISCHG_PWR,KIA_BMS_MIN_TEMP,KIA_BMS_MOD1_TEMP,KIA_BMS_MOD2_TEMP,KIA_BMS_MOD3_TEMP,KIA_BMS_MOD4_TEMP,KIA_BMS_SOC,KIA_MDPS_MOTOR_CURRENT,KIA_WHEEL_ANGLE_ABS
   "7DF":
@@ -124,7 +124,7 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.22ED02:KIA_EOT_V2
   "7E1":
   - 7E1.7E9.0131
-  - 7E1.7E9.21A0:KIA_ATF_T,KIA_GEAR,KIA_VSS_V3
+  - 7E1.7E9.21A0:KIA_APP_REL_TCM,KIA_ATF_T,KIA_BRAKE_PEDAL,KIA_COMMANDED_GEAR,KIA_CURRENT_GEAR,KIA_ENGINE_RPM_TCM,KIA_GEAR,KIA_OUTPUT_SPEED,KIA_TORQUE_CONVERTER_SLIP,KIA_TURBINE_SPEED,KIA_VSS_V3
   - 7E1.7E9.2201A4:KIA_CLUTCH_1_T,KIA_CLUTCH_2_T,KIA_GEAR_CUR,KIA_GEAR_NXT
   "7E2":
   - 7E2.7EA.2101:KIA_ACCEL_PEDAL_DEPTH,KIA_BRAKES_APPLIED,KIA_BRAKE_LAMP_STATUS,KIA_GEAR_D,KIA_GEAR_N,KIA_GEAR_P,KIA_GEAR_R_V2,KIA_VSS_V2,KIA_VSS_VMCU
