--- a/tests/test_cases/2022/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2022/commands/7C6.7CE.22B002|fc=1.yaml
@@ -3,6 +3,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.82812
     KIA_FLI_VOL: 7
+    KIA_FLI_VOL_THIRDGEN: 3.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 26011
     KIA_VPWR: 13.82812
@@ -13,6 +14,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.75
     KIA_FLI_VOL: 9
+    KIA_FLI_VOL_THIRDGEN: 4.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 26004
     KIA_VPWR: 13.75
@@ -23,6 +25,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.75
     KIA_FLI_VOL: 15
+    KIA_FLI_VOL_THIRDGEN: 7.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 22905
     KIA_VPWR: 13.75
@@ -33,6 +36,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.67188
     KIA_FLI_VOL: 19
+    KIA_FLI_VOL_THIRDGEN: 9.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 22903
     KIA_VPWR: 13.67188
@@ -43,6 +47,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.82812
     KIA_FLI_VOL: 50
+    KIA_FLI_VOL_THIRDGEN: 25
     KIA_ODO_KM: 0
     KIA_ODO_MI: 22527
     KIA_VPWR: 13.82812
@@ -53,6 +58,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.82812
     KIA_FLI_VOL: 50
+    KIA_FLI_VOL_THIRDGEN: 25
     KIA_ODO_KM: 0
     KIA_ODO_MI: 22784
     KIA_VPWR: 13.82812
@@ -63,6 +69,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 14.0625
     KIA_FLI_VOL: 61
+    KIA_FLI_VOL_THIRDGEN: 30.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 62432
     KIA_VPWR: 14.0625
@@ -73,6 +80,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.75
     KIA_FLI_VOL: 110
+    KIA_FLI_VOL_THIRDGEN: 55
     KIA_ODO_KM: 0
     KIA_ODO_MI: 21666
     KIA_VPWR: 13.75
@@ -83,6 +91,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 11.17188
     KIA_FLI_VOL: 112
+    KIA_FLI_VOL_THIRDGEN: 56
     KIA_ODO_KM: 0
     KIA_ODO_MI: 23152
     KIA_VPWR: 11.17188
@@ -93,6 +102,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 11.79688
     KIA_FLI_VOL: 255
+    KIA_FLI_VOL_THIRDGEN: 127.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 23052
     KIA_VPWR: 11.79688
