--- a/tests/test_cases/2023/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7C6.7CE.22B002|fc=1.yaml
@@ -3,6 +3,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 11.48438
     KIA_FLI_VOL: 18
+    KIA_FLI_VOL_THIRDGEN: 9
     KIA_ODO_KM: 0
     KIA_ODO_MI: 47007
     KIA_VPWR: 11.48438
@@ -13,6 +14,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.75
     KIA_FLI_VOL: 18
+    KIA_FLI_VOL_THIRDGEN: 9
     KIA_ODO_KM: 0
     KIA_ODO_MI: 47007
     KIA_VPWR: 13.75
@@ -23,6 +25,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.67188
     KIA_FLI_VOL: 20
+    KIA_FLI_VOL_THIRDGEN: 10
     KIA_ODO_KM: 0
     KIA_ODO_MI: 45524
     KIA_VPWR: 13.67188
@@ -33,6 +36,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.82812
     KIA_FLI_VOL: 24
+    KIA_FLI_VOL_THIRDGEN: 12
     KIA_ODO_KM: 0
     KIA_ODO_MI: 41020
     KIA_VPWR: 13.82812
@@ -43,6 +47,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.75
     KIA_FLI_VOL: 31
+    KIA_FLI_VOL_THIRDGEN: 15.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 41020
     KIA_VPWR: 13.75
@@ -53,6 +58,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 11.95312
     KIA_FLI_VOL: 48
+    KIA_FLI_VOL_THIRDGEN: 24
     KIA_ODO_KM: 0
     KIA_ODO_MI: 42440
     KIA_VPWR: 11.95312
@@ -63,6 +69,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.75
     KIA_FLI_VOL: 71
+    KIA_FLI_VOL_THIRDGEN: 35.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 41215
     KIA_VPWR: 13.75
@@ -73,6 +80,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.75
     KIA_FLI_VOL: 71
+    KIA_FLI_VOL_THIRDGEN: 35.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 41216
     KIA_VPWR: 13.75
@@ -83,6 +91,7 @@ test_cases:
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 11.95312
     KIA_FLI_VOL: 255
+    KIA_FLI_VOL_THIRDGEN: 127.5
     KIA_ODO_KM: 0
     KIA_ODO_MI: 41024
     KIA_VPWR: 11.95312
