Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -1226,6 +1226,31 @@ test_cases:
     7E82C40228024201C40
     7E82D1CAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 90.02368
+    KIA_TURBO_BOOST: 1.05743
+    KIA_WG_DUTY: 75.74273
+    KIA_WG_POS: 388.48905
+    KIA_WG_POSITION: 388.4947
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.47949
+    KIA_WG_VOLTAGE: 1.47951
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000002A6A2F
+    7E822692F7D256909BF
+    7E82306B5085D094107
+    7E82403000000A01000
+    7E82500000079000000
+    7E826AE4D8918000000
+    7E8270000006225E060
+    7E828F3F8A236663600
+    7E82924E027E01DA01A
+    7E82A2222FF000000C0
+    7E82B5D64FAD4366636
+    7E82C40228024201C40
+    7E82D1CAAAAAAAAAAAA
+- expected_values:
     KIA_TB_PRES: 91.657
     KIA_TURBO_BOOST: 1.29434
     KIA_WG_DUTY: 70.57603
