--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -834,6 +834,23 @@ test_cases:
     7E829AAE1C000000000
     7E82ACAF9B3F51BE0AA
 - expected_values:
+    KIA_KNOCK_RETARD_1_E019: -0.75
+    KIA_KNOCK_RETARD_2_E019: -0.75
+    KIA_KNOCK_RETARD_3_E019: -2.25
+    KIA_KNOCK_RETARD_4_E019: -2.25
+  response: |-
+    7E8104B62E019FFE7E7
+    7E8216701320033004E
+    7E822004E00FAFAF8F8
+    7E823F7F70000FEFEFC
+    7E824FCFBFB00001E1D
+    7E825211E211F00009B
+    7E82601D90100007E70
+    7E82700000000410025
+    7E828000000000036F4
+    7E829EAE3C000000000
+    7E82ACCFD5CF5D7E2AA
+- expected_values:
     KIA_KNOCK_RETARD_1_E019: 0
     KIA_KNOCK_RETARD_2_E019: 0
     KIA_KNOCK_RETARD_3_E019: 0
