--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -7,6 +7,23 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E82167010000000004
+    7E822000400FDFDFDFD
+    7E823FDFD0000FFFFFF
+    7E824FFFFFF00001214
+    7E82512151310000027
+    7E82601CF0100007E70
+    7E82700000000890014
+    7E828000000000040F1
+    7E8293BE3C000000000
+    7E82A6AFB80F5BCDFAA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E8216701000000000F
     7E822000F00FFFFFFFF
     7E823FFFF0000FFFFFF
