Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -49,6 +49,18 @@ test_cases:
     7E825BD0162BB627EFF
     7E826A00C0000AAAAAA
 - expected_values:
+    KIA_EIT: 21.75
+    KIA_EOT: 90.00345
+    KIA_IAT: 21.75174
+  response: |-
+    7E8102D62E0019FB7FF
+    7E8210000003B000049
+    7E82200000000520186
+    7E82364802C18000052
+    7E82400BEFD033C0000
+    7E825E5015DB85B0000
+    7E826E00C0700AAAAAA
+- expected_values:
     KIA_EIT: 35.25
     KIA_EOT: 93.75354
     KIA_IAT: 35.25208
