--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -4,6 +4,7 @@ supported_commands_by_ecu:
   - 770.778.22BC03
   - 770.778.22BC04
   - 770.778.22BC05
+  - 770.778.22BC06:KIA_BRAKE_LIGHT
   - 770.778.22BC07:KIA_DEFOG_LIGHT
   - 770.778.22BC08
   - 770.778.22BC09
@@ -12,6 +13,7 @@ supported_commands_by_ecu:
   - 7A0.7A8.22C00B|fc=1:KIA_FL_INVALID,KIA_FR_INVALID,KIA_RL_INVALID,KIA_RR_INVALID,KIA_TB_FL,KIA_TB_FR,KIA_TB_RL,KIA_TB_RR,KIA_TPMS_PRESS_RL,KIA_TPMS_PRESS_RR,KIA_TPMS_TEMP_FL,KIA_TPMS_TEMP_FR,KIA_TPMS_TEMP_RL,KIA_TPMS_TEMP_RR,KIA_TP_FL,KIA_TP_FL_PRE21,KIA_TP_FR,KIA_TP_FR_PRE21,KIA_TP_RL,KIA_TP_RL_PRE21,KIA_TP_RR,KIA_TP_RR_PRE21,KIA_TT_FL,KIA_TT_FL_PRE21,KIA_TT_FR,KIA_TT_FR_PRE21,KIA_TT_RL,KIA_TT_RL_PRE21,KIA_TT_RR,KIA_TT_RR_PRE21,KIA_TW_FL,KIA_TW_FR,KIA_TW_RL,KIA_TW_RR
   "7B3":
   - 7B3.7BB.220100|fc=1:KIA_HVAC_AAT,KIA_HVAC_EVAPORATOR_T,KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER,KIA_HVAC_IAT,KIA_HVAC_IAT_DRIVER_LEGS_VENT,KIA_HVAC_IAT_DRIVER_VENT,KIA_TEMP_EXT,KIA_TEMP_INT,KIA_VSS
+  - 7B3.7BB.220101:KIA_HVAC_IAT_PASSENGER_LEGS_VENT,KIA_HVAC_IAT_PASSENGER_VENT
   "7C6":
   - 7C6.7CE.22B002|fc=1:KIA_CLUSTER_VOLTAGE,KIA_FLI_VOL,KIA_FLI_VOL_THIRDGEN,KIA_ODO_KM,KIA_ODO_MI,KIA_VPWR
   "7D4":
@@ -93,6 +95,7 @@ supported_commands_by_ecu:
   - 7E0.7E8.22E002:KIA_INJ_DUR_1,KIA_INJ_DUR_2,KIA_INJ_DUR_3,KIA_INJ_DUR_4
   - 7E0.7E8.22E004
   - 7E0.7E8.22E00A:KIA_KNOCK_LEARN_1,KIA_KNOCK_LEARN_2,KIA_KNOCK_LEARN_3,KIA_KNOCK_LEARN_4,KIA_KNOCK_RETARD_1,KIA_KNOCK_RETARD_2,KIA_KNOCK_RETARD_3,KIA_KNOCK_RETARD_4
+  - 7E0.7E8.22E019:KIA_KNOCK_RETARD_1_E019,KIA_KNOCK_RETARD_2_E019,KIA_KNOCK_RETARD_3_E019,KIA_KNOCK_RETARD_4_E019
   - 7E0.7E8.22E021:KIA_TB_PRES,KIA_TURBO_BOOST,KIA_WG_DUTY,KIA_WG_POS,KIA_WG_POSITION,KIA_WG_SETPOINT,KIA_WG_SP,KIA_WG_V,KIA_WG_VOLTAGE
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
@@ -108,21 +111,46 @@ supported_commands_by_ecu:
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - 0142:VPWR
   - 0149:APP_D
+  - 7E1.7E9.2201A0:KIA_ATF_T_V2,KIA_BRAKE_PEDAL_V2,KIA_COMMANDED_GEAR_V2,KIA_CURRENT_GEAR_V2,KIA_GEAR_V2,KIA_OUTPUT_SPEED_V2,KIA_REL_APP,KIA_RPM_V2,KIA_TORQUE_CONVERTER_SLIP_V2,KIA_TURBINE_SPEED_V2,KIA_VSS_7E1
 unsupported_commands_by_ecu:
+  "730":
+  - 730.738.22F010:KIA_LATERAL_ACCELERATION,KIA_LONGITUDINAL_ACCELERATION,KIA_STEERING_ANGLE,KIA_WHEEL_FL_VSS_HD,KIA_WHEEL_FR_VSS_HD,KIA_WHEEL_RL_VSS_HD,KIA_WHEEL_RR_VSS_HD,KIA_YAW_RATE
   "744":
   - 744.74C.22E001|fc=1:KIA_AC_CHRG_STATE,KIA_AUX_BATTERY_VOLTAGE,KIA_DC_CHRG_STATE,KIA_ESTIMATED_CHRG_POWER,KIA_OBC_CHRG_AC_CURRENT,KIA_OBC_CHRG_AC_VOLTAGE,KIA_OBC_CHRG_DC_CURRENT,KIA_OBC_CHRG_DC_VOLTAGE,KIA_OBC_DCHRG_AC_CURRENT,KIA_OBC_DCHRG_DC_CURRENT
+  - 744.74C.22E002:KIA_EVSE_C,KIA_EVSE_CURRENT_REGULATION_TOLERANCE_VALUE,KIA_EVSE_DELIVERED_POWER_VALUE,KIA_EVSE_MAIN_POWER,KIA_EVSE_MAXIMUM_CURRENT_VALUE,KIA_EVSE_MAXIMUM_POWER_VALUE,KIA_EVSE_MAXIMUM_VOLTAGE_VALUE,KIA_EVSE_MINIMUM_CURRENT_VALUE,KIA_EVSE_MINIMUM_VOLTAGE_VALUE,KIA_EVSE_V
   - 744.74C.22E003|fc=1:KIA_AC_CHARGER_CURRENT,KIA_AC_CHARGING_TIME_AFTER_PLUG_IN,KIA_DC_CHARGER_CURRENT_CAPABILITY,KIA_DC_CHARGING_TIME_AFTER_PLUG_IN,KIA_DC_CHRG_TIME,KIA_HVBAT_AC_CHARGING_COUNTER,KIA_HVBAT_BMS_TARGET_CURRENT,KIA_HVBAT_BMS_TARGET_VOLTAGE,KIA_HVBAT_CHRG_CNT,KIA_HVBAT_CP_DUTY_CYCLE,KIA_HVBAT_CP_VOLTAGE,KIA_HVBAT_DC_CHRGNG,KIA_HVBAT_EV_MAX_CURRENT,KIA_HVBAT_EV_MAX_VOLTAGE,KIA_HVBAT_HV_BATTERY_VOLTAGE,KIA_HVBAT_PD_VOLTAGE,KIA_HVBAT_SOC_VCMS,KIA_HVBAT_TARGET_CURR,KIA_HVBAT_TARGET_VOLT,KIA_VCMS__AC_CHARGING_TIME
+  - 744.74C.22E004:KIA_400V_RELAY_ON_OFF_REQUEST,KIA_400V_RELAY_STATUS,KIA_AC_INLET_T_1,KIA_BATTERY_MAIN_RELAY_STATUS,KIA_CHARGING_SOCKET_CONNECTED,KIA_DC_INLET_T_1,KIA_DC_INLET_T_2
+  "7B3":
+  - 7B3.7BB.220102:KIA_HVAC_COOLANT_T,KIA_HVAC_INVERTER_T
   "7D1":
   - 7D1.7D9.2101:KIA_BRAKE_P,KIA_FL_VSS,KIA_FR_VSS,KIA_RL_VSS,KIA_RR_VSS,KIA_STEER_ANGLE,KIA_TC_SWITCH,KIA_TIRE_FL_VSS_V1,KIA_TIRE_FR_VSS_V1,KIA_TIRE_RL_VSS_V1,KIA_TIRE_RR_VSS_V1,KIA_VSS_AVG
   - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS_V2,KIA_VSS_AVG_V2,KIA_WHEEL_FL_VSS
   - 7D1.7D9.224000:KIA_TIRE_FL_VSS,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS,KIA_TIRE_RR_VSS_V2
   "7D4":
   - 7D4.7DC.2101:KIA_STEER_ANGLE_V2
+  "7D6":
+  - 7D6.7DE.2106:KIA_FL_TP,KIA_FL_TT,KIA_FR_TP,KIA_FR_TT,KIA_RL_TP,KIA_RL_TT,KIA_RR_TP,KIA_RR_TT,KIA_TP_1,KIA_TP_2,KIA_TP_3,KIA_TP_4,KIA_TT_1,KIA_TT_2,KIA_TT_3,KIA_TT_4
   "7E0":
+  - 7E0.211D:KIA_MIS_1_V2,KIA_MIS_2_V2,KIA_MIS_3_V2,KIA_MIS_4_V2,KIA_MIS_CAT_1,KIA_MIS_CAT_2,KIA_MIS_CAT_3,KIA_MIS_CAT_4
+  - 7E0.2122:KIA_BUTANE_IN_LPG,KIA_LPG_ELECTRICAL_FUEL_PUMP_PWM,KIA_LPG_LOW_SIDE_T,KIA_LPG_PRESSURE_IN_FUEL_RAIL__AVERAGE_
   - 7E0.2221A0:KIA_ATF_TEMP
   - 7E0.7D8.2101
   - 7E0.7D8.2118:KIA_CVVT_T
+  - 7E0.7E8.2100:KIA_COOLANT_FAN_HIGH_SPEED,KIA_COOLANT_FAN_LOW_SPEED,KIA_FUEL_CUT_V2,KIA_IDLE_CONTROL_MODE,KIA_KNOCK_DETECTED_V2
   - 7E0.7E8.2101:KIA_COMMANDED_ENGINE_IDLE_RPM,KIA_CONTROL_MODULE_VOLTAGE,KIA_CONTROL_MODULE_VOLTAGE_AFTER_IGNITION,KIA_COOLANT_T_SENSOR_VOLTAGE,KIA_ENGINE_COOLANT_T,KIA_ENGINE_OIL_T,KIA_ENGINE_RPM,KIA_IAT_SENSOR_VOLTAGE,KIA_INTAKE_AIR_T,KIA_INTAKE_MANIFOLD_ABSOLUTE_PRESSURE,KIA_MAP_SENSOR_VOLTAGE,KIA_MIS_1,KIA_MIS_2,KIA_MIS_3,KIA_MIS_4
+  - 7E0.7E8.2102:KIA_COMMANDED_EVAPORATIVE_PURGE,KIA_INJ_TIMING_1,KIA_INJ_TIMING_2,KIA_INJ_TIMING_3,KIA_INJ_TIMING_4,KIA_OXYGEN_SENSOR_11,KIA_OXYGEN_SENSOR_21,KIA_VSS_V2_V2
+  - 7E0.7E8.2103:KIA_DISTANCE_SINCE_LAST_DPF_REGEN,KIA_EXHAUST_GAS_T,KIA_ODO,KIA_ODOMETER_AT_LAST_DPF_REGEN,KIA_REQUESTED_TORQUE
+  - 7E0.7E8.2104:KIA_COOLANT_FAN_HIGH_SPEED__1_8_,KIA_COOLANT_FAN_LOW_SPEED__1_8_,KIA_FUEL_CUT,KIA_KNOCK_DETECTED,KIA_WIDE_OPEN_THROTTLE
+  - 7E0.7E8.2106:KIA_DPF_REGENERATION_STATE
+  - 7E0.7E8.2107:KIA_MAIN_INJECTION_QTY,KIA_PILOT_INJECTION_QTY,KIA_POST_INJECTION_QTY
+  - 7E0.7E8.210D:KIA_MIS_CNT_1,KIA_MIS_CNT_2,KIA_MIS_CNT_3,KIA_MIS_CNT_4,KIA_MIS_CNT_ALL,KIA_MIS_CNT_EMIS_1,KIA_MIS_CNT_EMIS_2,KIA_MIS_CNT_EMIS_3,KIA_MIS_CNT_EMIS_4
+  - 7E0.7E8.2113:KIA_BAROMETRIC_PRESSURE,KIA_TIMING_ADVANCE_1,KIA_TIMING_ADVANCE_2,KIA_TIMING_ADVANCE_3,KIA_TIMING_ADVANCE_4
+  - 7E0.7E8.2114:KIA_COMMANDED_THROTTLE_ACTUATOR,KIA_COOLANT_FAN__PWM_,KIA_RELATIVE_ACCELERATOR_PEDAL_POSITION,KIA_RELATIVE_ACCELERATOR_PEDAL_POSITION_VOLTAGE,KIA_REQUESTED_TORQUE2,KIA_THROTTLE_POSITION_1,KIA_THROTTLE_POSITION_2,KIA_THROTTLE_POSITION_SENSOR_VOLTAGE__1,KIA_THROTTLE_POSITION_SENSOR_VOLTAGE__2
+  - 7E0.7E8.2115:KIA_STFT_B1,KIA_STFT_B1_IDLE
+  - 7E0.7E8.2116:KIA_ACTUAL_LAMBDA_VALUE,KIA_KNOCK_RETARD_CYLINDER_1,KIA_KNOCK_RETARD_CYLINDER_2,KIA_KNOCK_RETARD_CYLINDER_3,KIA_KNOCK_RETARD_CYLINDER_4,KIA_LABMDA_SENSOR_CORRECTION_VALUE
+  - 7E0.7E8.2117:KIA_INTAKE_CAMSHAFT_POSITION_ACTUAL,KIA_INTAKE_CAMSHAFT_POSITION_COMMANDED
+  - 7E0.7E8.2119:KIA_FUEL_ADAPTATION_AT_IDLE,KIA_FUEL_ADAPTATION_AT_PART_LOAD,KIA_KNOCK_RETARD_1_V2,KIA_KNOCK_RETARD_2_V2,KIA_KNOCK_RETARD_3_V2,KIA_KNOCK_RETARD_4_V2
+  - 7E0.7E8.211B:KIA_DPF_DIFFERENTIAL_PRESSURE
   - 7E0.7E8.22ED02:KIA_EOT_V2
   "7E1":
   - 7E1.7E9.0131
@@ -131,6 +159,11 @@ unsupported_commands_by_ecu:
   "7E2":
   - 7E2.7EA.2101:KIA_ACCEL_PEDAL_DEPTH,KIA_BRAKES_APPLIED,KIA_BRAKE_LAMP_STATUS,KIA_GEAR_D,KIA_GEAR_N,KIA_GEAR_P,KIA_GEAR_R_V2,KIA_VSS_V2,KIA_VSS_VMCU
   - 7E2.7EA.22E004:KIA_12V_V,KIA_ACCELERATOR_PEDAL_POSITION,KIA_VPWR_V3,KIA_VSS_HD
+  - 7E2.7EA.22E005:KIA_DISCONNECTOR_ACTUATOR_MOTOR_CURRENT,KIA_DISCONNECTOR_DISENGAGE_LAST_TIME,KIA_DISCONNECTOR_END_POINT,KIA_DISCONNECTOR_INVERTER_PWM_DUTY,KIA_DISCONNECTOR_MEET_POINT,KIA_DISCONNECTOR_STROKE_POSITION,KIA_DISCONNECTOR_ZERO_COUNT_OFFSET
+  "7E3":
+  - 7E3.7EB.2102:KIA_MOTOR_RPM_2102
+  - 7E3.7EB.22E001:KIA_HEAT_SINK_T,KIA_IGN_VOLTAGE,KIA_INVERTER_T,KIA_MOTOR_ACTUAL_TORQUE,KIA_MOTOR_PHASE_CURRENT_RMS,KIA_MOTOR_RPM,KIA_MOTOR_T,KIA_NOMINAL_TORQUE_VALUE
+  - 7E3.7EB.22E009:KIA_EOP_ACTUAL_SPEED,KIA_EOP_COMMANDED_SPEED,KIA_EOP_CURRENT_DC,KIA_EOP_CURRENT_IQ,KIA_EWP_ACTUAL_ROTATION_SPEED,KIA_EWP_COMMANDED_ROTATION_SPEED,KIA_EWP_CURRENT_DC,KIA_EWP_VOLTAGE_DC
   "7E4":
   - 7E4.7EC.2102|fc=1:KIA_HVBAT_CMU001_VOLT_V2,KIA_HVBAT_CMU002_VOLT_V2,KIA_HVBAT_CMU003_VOLT_V2,KIA_HVBAT_CMU004_VOLT_V2,KIA_HVBAT_CMU005_VOLT_V2,KIA_HVBAT_CMU006_VOLT_V2,KIA_HVBAT_CMU007_VOLT_V2,KIA_HVBAT_CMU008_VOLT_V2,KIA_HVBAT_CMU009_VOLT_V2,KIA_HVBAT_CMU010_VOLT_V2,KIA_HVBAT_CMU011_VOLT_V2,KIA_HVBAT_CMU012_VOLT_V2,KIA_HVBAT_CMU013_VOLT_V2,KIA_HVBAT_CMU014_VOLT_V2,KIA_HVBAT_CMU015_VOLT_V2,KIA_HVBAT_CMU016_VOLT_V2,KIA_HVBAT_CMU017_VOLT_V2,KIA_HVBAT_CMU018_VOLT_V2,KIA_HVBAT_CMU019_VOLT_V2,KIA_HVBAT_CMU020_VOLT_V2,KIA_HVBAT_CMU021_VOLT_V2,KIA_HVBAT_CMU022_VOLT_V2,KIA_HVBAT_CMU023_VOLT_V2,KIA_HVBAT_CMU024_VOLT_V2,KIA_HVBAT_CMU025_VOLT_V2,KIA_HVBAT_CMU026_VOLT_V2,KIA_HVBAT_CMU027_VOLT_V2,KIA_HVBAT_CMU028_VOLT_V2,KIA_HVBAT_CMU029_VOLT_V2,KIA_HVBAT_CMU030_VOLT_V2,KIA_HVBAT_CMU031_VOLT_V2,KIA_HVBAT_CMU032_VOLT_V2
   - 7E4.7EC.2103|fc=1:KIA_HVBAT_CMU033_VOLT_V2,KIA_HVBAT_CMU034_VOLT_V2,KIA_HVBAT_CMU035_VOLT_V2,KIA_HVBAT_CMU036_VOLT_V2,KIA_HVBAT_CMU037_VOLT_V2,KIA_HVBAT_CMU038_VOLT_V2,KIA_HVBAT_CMU039_VOLT_V2,KIA_HVBAT_CMU040_VOLT_V2,KIA_HVBAT_CMU041_VOLT_V2,KIA_HVBAT_CMU042_VOLT_V2,KIA_HVBAT_CMU043_VOLT_V2,KIA_HVBAT_CMU044_VOLT_V2,KIA_HVBAT_CMU045_VOLT_V2,KIA_HVBAT_CMU046_VOLT_V2,KIA_HVBAT_CMU047_VOLT_V2,KIA_HVBAT_CMU048_VOLT_V2,KIA_HVBAT_CMU049_VOLT_V2,KIA_HVBAT_CMU050_VOLT_V2,KIA_HVBAT_CMU051_VOLT_V2,KIA_HVBAT_CMU052_VOLT_V2,KIA_HVBAT_CMU053_VOLT_V2,KIA_HVBAT_CMU054_VOLT_V2,KIA_HVBAT_CMU055_VOLT_V2,KIA_HVBAT_CMU056_VOLT_V2,KIA_HVBAT_CMU057_VOLT_V2,KIA_HVBAT_CMU058_VOLT_V2,KIA_HVBAT_CMU059_VOLT_V2,KIA_HVBAT_CMU060_VOLT_V2,KIA_HVBAT_CMU061_VOLT_V2,KIA_HVBAT_CMU062_VOLT_V2,KIA_HVBAT_CMU063_VOLT_V2,KIA_HVBAT_CMU064_VOLT_V2
@@ -144,5 +177,16 @@ unsupported_commands_by_ecu:
   - 7E4.7EC.22010A|fc=1:KIA_HVBAT_CMU097_VOLT_V2,KIA_HVBAT_CMU098_VOLT_V2,KIA_HVBAT_CMU099_VOLT,KIA_HVBAT_CMU100_VOLT,KIA_HVBAT_CMU101_VOLT,KIA_HVBAT_CMU102_VOLT,KIA_HVBAT_CMU103_VOLT,KIA_HVBAT_CMU104_VOLT,KIA_HVBAT_CMU105_VOLT,KIA_HVBAT_CMU106_VOLT,KIA_HVBAT_CMU107_VOLT,KIA_HVBAT_CMU108_VOLT,KIA_HVBAT_CMU109_VOLT,KIA_HVBAT_CMU110_VOLT,KIA_HVBAT_CMU111_VOLT,KIA_HVBAT_CMU112_VOLT,KIA_HVBAT_CMU113_VOLT,KIA_HVBAT_CMU114_VOLT,KIA_HVBAT_CMU115_VOLT,KIA_HVBAT_CMU116_VOLT,KIA_HVBAT_CMU117_VOLT,KIA_HVBAT_CMU118_VOLT,KIA_HVBAT_CMU119_VOLT,KIA_HVBAT_CMU120_VOLT,KIA_HVBAT_CMU121_VOLT,KIA_HVBAT_CMU122_VOLT,KIA_HVBAT_CMU123_VOLT,KIA_HVBAT_CMU124_VOLT,KIA_HVBAT_CMU125_VOLT,KIA_HVBAT_CMU126_VOLT,KIA_HVBAT_CMU127_VOLT,KIA_HVBAT_CMU128_VOLT
   - 7E4.7EC.22010B|fc=1:KIA_HVBAT_CMU129_VOLT,KIA_HVBAT_CMU130_VOLT,KIA_HVBAT_CMU131_VOLT,KIA_HVBAT_CMU132_VOLT,KIA_HVBAT_CMU133_VOLT,KIA_HVBAT_CMU134_VOLT,KIA_HVBAT_CMU135_VOLT,KIA_HVBAT_CMU136_VOLT,KIA_HVBAT_CMU137_VOLT,KIA_HVBAT_CMU138_VOLT,KIA_HVBAT_CMU139_VOLT,KIA_HVBAT_CMU140_VOLT,KIA_HVBAT_CMU141_VOLT,KIA_HVBAT_CMU142_VOLT,KIA_HVBAT_CMU143_VOLT,KIA_HVBAT_CMU144_VOLT,KIA_HVBAT_CMU145_VOLT,KIA_HVBAT_CMU146_VOLT,KIA_HVBAT_CMU147_VOLT,KIA_HVBAT_CMU148_VOLT,KIA_HVBAT_CMU149_VOLT,KIA_HVBAT_CMU150_VOLT,KIA_HVBAT_CMU151_VOLT,KIA_HVBAT_CMU152_VOLT,KIA_HVBAT_CMU153_VOLT,KIA_HVBAT_CMU154_VOLT,KIA_HVBAT_CMU155_VOLT,KIA_HVBAT_CMU156_VOLT,KIA_HVBAT_CMU157_VOLT,KIA_HVBAT_CMU158_VOLT,KIA_HVBAT_CMU159_VOLT,KIA_HVBAT_CMU160_VOLT
   - 7E4.7EC.22010C|fc=1:KIA_HVBAT_CMU161_VOLT,KIA_HVBAT_CMU162_VOLT,KIA_HVBAT_CMU163_VOLT,KIA_HVBAT_CMU164_VOLT,KIA_HVBAT_CMU165_VOLT,KIA_HVBAT_CMU166_VOLT,KIA_HVBAT_CMU167_VOLT,KIA_HVBAT_CMU168_VOLT,KIA_HVBAT_CMU169_VOLT,KIA_HVBAT_CMU170_VOLT,KIA_HVBAT_CMU171_VOLT,KIA_HVBAT_CMU172_VOLT,KIA_HVBAT_CMU173_VOLT,KIA_HVBAT_CMU174_VOLT,KIA_HVBAT_CMU175_VOLT,KIA_HVBAT_CMU176_VOLT,KIA_HVBAT_CMU177_VOLT,KIA_HVBAT_CMU178_VOLT,KIA_HVBAT_CMU179_VOLT,KIA_HVBAT_CMU180_VOLT,KIA_HVBAT_CMU181_VOLT,KIA_HVBAT_CMU182_VOLT,KIA_HVBAT_CMU183_VOLT,KIA_HVBAT_CMU184_VOLT,KIA_HVBAT_CMU185_VOLT,KIA_HVBAT_CMU186_VOLT,KIA_HVBAT_CMU187_VOLT,KIA_HVBAT_CMU188_VOLT,KIA_HVBAT_CMU189_VOLT,KIA_HVBAT_CMU190_VOLT,KIA_HVBAT_CMU191_VOLT,KIA_HVBAT_CMU192_VOLT
+  - 7E4.7EC.220111:KIA_BATTERY_PACK_B17,KIA_BATTERY_PACK_B18,KIA_NORMAL_CHARGING_COUNT,KIA_NORMAL_CHARGING_ENERGY_TOT,KIA_QUICK_CHARGING_COUNT,KIA_QUICK_CHARGING_ENERGY_TOT
+  - 7E4.7EC.220114:KIA_AC_COMPRESSOR_OPERATION_RPM
+  "7E5":
+  - 7E5.21C0:KIA_APP_REL_AWD,KIA_CLUTCH_SOLENOID_DUTY,KIA_COMMANDED_TORQUE,KIA_FRONT_LEFT_WHEEL_SPEED,KIA_FRONT_RIGHT_WHEEL_SPEED,KIA_HEAT,KIA_LOCK_SWITCH,KIA_MALFUNCTION_INDICATOR,KIA_PRESSURE_SENSOR,KIA_REAR_LEFT_WHEEL_SPEED,KIA_REAR_RIGHT_WHEEL_SPEED,KIA_RPM_V3,KIA_STEERING_WHEEL_ANGLE,KIA_SUPPLY_VOLTAGE,KIA_SYSTEM_VOLTAGE,KIA_VSS_AWD
+  - 7E5.7ED.22E001:KIA_CHARGE_MODE_AC_MAXIMUM_CURRENT_LIMIT,KIA_CHARGE_MODE_DC_MAXIMUM_CURRENT_LIMIT,KIA_CHARGE_MODE_DC_TARGET_VOLTAGE,KIA_DISCHARGE_MODE_AC_MAXIMUM_CURRENT_LIMIT,KIA_DISCHARGE_MODE_DC_MAXIMUM_CURRENT_LIMIT,KIA_DISCHARGE_MODE_V2L_AC_TARGET_VOLTAGE
+  - 7E5.7ED.22E002:KIA_OBC_AC_CURRENT_A_RMS,KIA_OBC_AC_CURRENT_B_RMS,KIA_OBC_AC_FREQUENCY,KIA_OBC_AC_INPUT_CURRENT_SENSOR_A_SIGNAL_VOLTAGE,KIA_OBC_AC_INPUT_CURRENT_SENSOR_B_SIGNAL_VOLTAGE,KIA_OBC_AC_TOTAL_CURRENT_RMS,KIA_OBC_AC_VOLTAGE_A_RMS,KIA_OBC_AC_VOLTAGE_B_RMS,KIA_OBC_DC_CURRENT_A_RMS,KIA_OBC_DC_CURRENT_B_RMS,KIA_OBC_DC_CURRENT_TOTAL_RMS,KIA_OBC_DC_VOLTAGE,KIA_OBC_T_A,KIA_OBC_T_B
+  - 7E5.7ED.22E003:KIA_OBC_CHARGE_MODE_DC_TARGET_CURRENT,KIA_OBC_CHARGE_MODE_DC_TARGET_VOLTAGE
+  - 7E5.7ED.22E011:KIA_AUX_BATTERY_CURRENT,KIA_AUX_BATTERY_STATE_OF_CHARGE,KIA_AUX_BATTERY_T,KIA_AUX_BATTERY_VOLTAGE_7E5,KIA_LDC_INPUT_VOLTAGE,KIA_LDC_OUTPUT_CURRENT,KIA_LDC_OUTPUT_VOLTAGE,KIA_LDC_T
+  - 7E5.7ED.22E101:KIA_2025_AUX_BATTERY_CURRENT,KIA_2025_AUX_BATTERY_STATE_OF_CHARGE,KIA_2025_AUX_BATTERY_T,KIA_2025_AUX_BATTERY_VOLTAGE,KIA_2025_LDC_INPUT_VOLTAGE,KIA_2025_LDC_OUTPUT_CURRENT,KIA_2025_LDC_OUTPUT_VOLTAGE,KIA_2025_LDC_T
+  "7E6":
+  - 7E6.7EE.2180:KIA_AAT
   "7E7":
   - 7E7.7EF.22C101:KIA_TIRE_FL_SPD,KIA_TIRE_FR_SPD,KIA_TIRE_RL_SPD,KIA_TIRE_RR_SPD
