--- a/tests/test_cases/2022/commands/7E0.7E8.22E00A.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.22E00A.yaml
@@ -166,6 +166,17 @@ test_cases:
     7E822414EC38032CA00
     7E8235A701721AAAAAA
 - expected_values:
+    KIA_KNOCK_LEARN_1: 21.4
+    KIA_KNOCK_RETARD_1: -14.4
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 3
+  response: |-
+    7E8101862E00A7F0700
+    7E821003D00D2208700
+    7E8222F4FB880BF0F03
+    7E8235AD0206BAAAAAA
+- expected_values:
     KIA_KNOCK_LEARN_1: 19.8
     KIA_KNOCK_RETARD_1: -14.4
     KIA_KNOCK_RETARD_2: -25.6
