Update command data for Kia/Stinger

--- a/tests/test_cases/2022/commands/770.778.22BC06.yaml
+++ b/tests/test_cases/2022/commands/770.778.22BC06.yaml
@@ -5,3 +5,13 @@ test_cases:
   response: |-
     778100B62BC06B48000
     778216D00000080AAAA
+- expected_values:
+    KIA_BRAKE_LIGHT: 0
+  response: |-
+    778100B62BC06B48000
+    778216D00020080AAAA
+- expected_values:
+    KIA_BRAKE_LIGHT: 45
+  response: |-
+    778100B62BC06B48000
+    778216D2D000080AAAA
