--- a/tests/test_cases/2022/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.22E019.yaml
@@ -7,6 +7,40 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E82167011E003800DB
+    7E822FF0F00FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00001110
+    7E8250E100D0E000054
+    7E82600010000007E70
+    7E827000000001B0010
+    7E8280000000000C5EB
+    7E82939EBC000000000
+    7E82AB6FCAAEE0CE8AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
+    7E82167013800380009
+    7E822000F00FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00001112
+    7E82511131310000054
+    7E82600010000007E70
+    7E827000000001B0010
+    7E8280000000000C5EB
+    7E82939EBC000000000
+    7E82AB6FCAAEE0CE8AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E8216701F4FFEFFFB9
     7E822FFC2FFFFFFFFFF
     7E823FFFF0000FFFFFF
