--- a/tests/test_cases/2022/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2022/commands/7E1.7E9.2201A0.yaml
@@ -40,3 +40,43 @@ test_cases:
     7E924C1C00C00C53800
     7E92500000000000000
     7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 42
+    KIA_BRAKE_PEDAL_V2: 193
+    KIA_COMMANDED_GEAR_V2: 18
+    KIA_CURRENT_GEAR_V2: 3
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 664
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 1071
+    KIA_TORQUE_CONVERTER_SLIP_V2: -2
+    KIA_TURBINE_SPEED_V2: 1073
+    KIA_VSS_7E1: 23
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E9210010BC17000010
+    7E922C40A6052064A07
+    7E923F8C100080312FF
+    7E924C1C00C00C53900
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 43
+    KIA_BRAKE_PEDAL_V2: 192
+    KIA_COMMANDED_GEAR_V2: 20
+    KIA_CURRENT_GEAR_V2: 3
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 1149
+    KIA_REL_APP: 26.66667
+    KIA_RPM_V2: 1860
+    KIA_TORQUE_CONVERTER_SLIP_V2: 9
+    KIA_TURBINE_SPEED_V2: 1854
+    KIA_VSS_7E1: 41
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921001D102938441C
+    7E922F811F453064A08
+    7E92324C149080314FF
+    7E924C0C00C00C53900
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
