Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
@@ -120,6 +120,23 @@ test_cases:
     7BB24CA14C9FFFF0086
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: -8.5
+    KIA_HVAC_EVAPORATOR_T: -0.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 55
+    KIA_HVAC_IAT: 16
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
+    KIA_TEMP_EXT: -8.5
+    KIA_TEMP_INT: 16
+    KIA_VSS: 32
+  response: |-
+    7BB10256201007F901E
+    7BB2168FF703F4F00E4
+    7BB229700E5FFFF0EFF
+    7BB23FFFFFFFFFFFFAE
+    7BB247F37C8FFFF20A7
+    7BB25FF00FF00000000
+- expected_values:
     KIA_HVAC_AAT: 9.5
     KIA_HVAC_EVAPORATOR_T: 3
     KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 39
