--- a/tests/test_cases/2022/commands/7E0.7E8.22E00A.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.22E00A.yaml
@@ -177,6 +177,17 @@ test_cases:
     7E8222D4FB780BF2B03
     7E8235AD02063AAAAAA
 - expected_values:
+    KIA_KNOCK_LEARN_1: 14.8
+    KIA_KNOCK_RETARD_1: -14.8
+    KIA_KNOCK_RETARD_2: -25.6
+    KIA_KNOCK_RETARD_3: -13
+    KIA_KNOCK_RETARD_4: 6.2
+  response: |-
+    7E8101862E00A7F0700
+    7E821005900CB208700
+    7E8222E4FB680BF1F03
+    7E8235AD0204AAAAAAA
+- expected_values:
     KIA_KNOCK_LEARN_1: 6.6
     KIA_KNOCK_RETARD_1: -12.6
     KIA_KNOCK_RETARD_2: -25.6
