--- a/tests/test_cases/2022/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2022/commands/7E1.7E9.2201A0.yaml
@@ -1,6 +1,26 @@
 command_id: 7E1.7E9.2201A0
 test_cases:
 - expected_values:
+    KIA_ATF_T_V2: 45
+    KIA_BRAKE_PEDAL_V2: 193
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 1
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 0
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 706
+    KIA_TORQUE_CONVERTER_SLIP_V2: 706
+    KIA_TURBINE_SPEED_V2: 0
+    KIA_VSS_7E1: 0
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921000B0800000000
+    7E922000000550E5113
+    7E92308C008080101FF
+    7E924C1C00C00C53900
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 26
     KIA_BRAKE_PEDAL_V2: 193
     KIA_COMMANDED_GEAR_V2: 18
@@ -58,6 +78,26 @@ test_cases:
     7E922C40A6052064A07
     7E923F8C100080312FF
     7E924C1C00C00C53900
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 46
+    KIA_BRAKE_PEDAL_V2: 192
+    KIA_COMMANDED_GEAR_V2: 19
+    KIA_CURRENT_GEAR_V2: 3
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 803
+    KIA_REL_APP: 11.76471
+    KIA_RPM_V2: 1301
+    KIA_TORQUE_CONVERTER_SLIP_V2: 5
+    KIA_TURBINE_SPEED_V2: 1295
+    KIA_VSS_7E1: 28
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E9210014541C161E14
+    7E9223C0C8C56064A08
+    7E92314C115080313FF
+    7E924C0C00C00C53900
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
