--- a/tests/test_cases/2022/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.22E019.yaml
@@ -41,6 +41,40 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E82167014800480010
+    7E822002100FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00000E0F
+    7E8250F0F0D0E000054
+    7E82600010000007E70
+    7E82700000000140020
+    7E828000000000031EB
+    7E829D5EAC000000000
+    7E82ABFFC4BEFB8E8AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
+    7E8216701F3FF3F00BC
+    7E822FF1600FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00000C0F
+    7E8250C130D0E000054
+    7E82600010000007E70
+    7E82700000000140020
+    7E828000000000031EB
+    7E829D5EAC000000000
+    7E82ABFFC4BEFB8E8AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E8216701F4FFEFFFB9
     7E822FFC2FFFFFFFFFF
     7E823FFFF0000FFFFFF
