Update command data for Kia/Stinger

--- a/tests/test_cases/2022/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2022/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -145,37 +145,38 @@ test_cases:
     KIA_FL_INVALID: 1
     KIA_FR_INVALID: 0
     KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 1
+    KIA_RR_INVALID: 0
     KIA_TB_FL: 3V+
     KIA_TB_FR: 3V+
-    KIA_TB_RR: 3V+
-    KIA_TPMS_PRESS_RL: 0.4
+    KIA_TPMS_PRESS_RL: 0
     KIA_TPMS_PRESS_RR: 0.8
     KIA_TPMS_TEMP_FL: 0
-    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_FR: 5
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 0
-    KIA_TP_FR: 15.2
-    KIA_TP_FR_PRE21: 35.8
+    KIA_TP_FR: 14.6
+    KIA_TP_FR_PRE21: 33
     KIA_TP_RL: 0.8
-    KIA_TP_RR: 0.4
-    KIA_TP_RR_PRE21: 34.8
+    KIA_TP_RL_PRE21: 33.8
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 29.6
     KIA_TT_FL: -50
-    KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: 26
+    KIA_TT_FR: -45
+    KIA_TT_FR_PRE21: 23
     KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 23
     KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: 27
+    KIA_TT_RR_PRE21: 23
     KIA_TW_FL: 1
     KIA_TW_FR: 1
     KIA_TW_RL: 1
-    KIA_TW_RR: 0
+    KIA_TW_RR: 1
   response: |-
     7A8102062C00BFFFFFF
-    7A8218000000002B34C
-    7A8220400AE4D040000
-    7A823000002FB8FB98F
+    7A8218000000002A549
+    7A822050094490400A9
+    7A823490400FB8FB98F
     7A824B987AF87AFAAAA
 - expected_values:
     KIA_FL_INVALID: 1
