--- a/tests/test_cases/2022/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.22E019.yaml
@@ -7,6 +7,40 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E821670102004100D0
+    7E822FF2300FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00001311
+    7E8250F110F0E000054
+    7E82600010000007E70
+    7E8270000000074FF1D
+    7E82800000000009BEB
+    7E8290EE9C000000000
+    7E82AA1FCB1EDB1E8AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
+    7E821670103004100B8
+    7E822FF2300FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00001412
+    7E82510110F0E000054
+    7E82600010000007E70
+    7E827000000000A001A
+    7E828000000000084EA
+    7E8292CE9C000000000
+    7E82A45FA84ED6EE6AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E82167011E003800DB
     7E822FF0F00FFFFFFFF
     7E823FFFF0000FFFFFF
@@ -41,6 +75,74 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E82167014100410007
+    7E822002300FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF0000100F
+    7E8250F0D100C000054
+    7E82600010000007E70
+    7E827000000000A001A
+    7E8280000000000DEEA
+    7E82933E9C000000000
+    7E82AE9FA63EDB7E6AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
+    7E82167014100410023
+    7E822002300FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00000E0E
+    7E8250E0F100D000054
+    7E82600010000007E70
+    7E827000000000A001A
+    7E82800000000005FEB
+    7E829B0E9C000000000
+    7E82AA3FB1EEEB5E7AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
+    7E82167014100410023
+    7E822002300FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF0000120D
+    7E8250F0F0E0D000054
+    7E82600010000007E70
+    7E827000000000A001A
+    7E82800000000007CEB
+    7E8293FE9C000000000
+    7E82A70FCCAED77E7AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
+    7E82167014100410023
+    7E822002300FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00001616
+    7E825181C1B17000054
+    7E82600010000007E70
+    7E827000000000A001A
+    7E828000000000052EA
+    7E82940E9C000000000
+    7E82A17FAE4ED9FE6AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E82167014800480010
     7E822002100FFFFFFFF
     7E823FFFF0000FFFFFF
@@ -51,6 +153,23 @@ test_cases:
     7E828000000000031EB
     7E829D5EAC000000000
     7E82ABFFC4BEFB8E8AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
+    7E8216701E7FF4100A8
+    7E822FF2300FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00000F0D
+    7E8250D110C0C000054
+    7E82600010000007E70
+    7E827000000000A001A
+    7E82800000000008AEB
+    7E82943EAC000000000
+    7E82AB4FBE5ED8BE7AA
 - expected_values:
     KIA_KNOCK_RETARD_1_E019: 0
     KIA_KNOCK_RETARD_2_E019: 0
