--- a/tests/test_cases/2022/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.22E021.yaml
@@ -801,6 +801,31 @@ test_cases:
     7E82CC027402C201E20
     7E82D1EAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 93.00844
+    KIA_TURBO_BOOST: 1.49036
+    KIA_WG_DUTY: 76.94209
+    KIA_WG_POS: 0.0061
+    KIA_WG_POSITION: 0.0061
+    KIA_WG_SETPOINT: 84.24811
+    KIA_WG_SP: 84.24689
+    KIA_WG_V: 1.63574
+    KIA_WG_VOLTAGE: 1.63577
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF0000002BD230
+    7E822D1302C26460850
+    7E8230BCF0CC10B610A
+    7E82415000000A01000
+    7E82500000079000000
+    7E826DA4D3819000000
+    7E8270000004529E062
+    7E8287C000135EB34A0
+    7E82926E02AE01C2019
+    7E82A402BFF00000040
+    7E82B636DFA81331933
+    7E82CC027402C201E20
+    7E82D1EAAAAAAAAAAAA
+- expected_values:
     KIA_TB_PRES: 93.04989
     KIA_TURBO_BOOST: 1.49637
     KIA_WG_DUTY: 73.04799
