--- a/tests/test_cases/2022/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2022/commands/7E1.7E9.2201A0.yaml
@@ -61,6 +61,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 43
+    KIA_BRAKE_PEDAL_V2: 193
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 0
+    KIA_GEAR_V2: 11
+    KIA_OUTPUT_SPEED_V2: 0
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 1032
+    KIA_TORQUE_CONVERTER_SLIP_V2: 22
+    KIA_TURBINE_SPEED_V2: 1011
+    KIA_VSS_7E1: 0
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E9210010200000000F
+    7E922CC000053000008
+    7E92358C2000B0001FF
+    7E924C1C01C0032CB00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 42
     KIA_BRAKE_PEDAL_V2: 193
     KIA_COMMANDED_GEAR_V2: 18
@@ -118,5 +138,105 @@ test_cases:
     7E922F811F453064A08
     7E92324C149080314FF
     7E924C0C00C00C53900
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 46
+    KIA_BRAKE_PEDAL_V2: 192
+    KIA_COMMANDED_GEAR_V2: 20
+    KIA_CURRENT_GEAR_V2: 4
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 1574
+    KIA_REL_APP: 3.92157
+    KIA_RPM_V2: 1878
+    KIA_TORQUE_CONVERTER_SLIP_V2: 1
+    KIA_TURBINE_SPEED_V2: 1878
+    KIA_VSS_7E1: 56
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921001D5838140A1D
+    7E9225818985604A608
+    7E92304C20C080414FF
+    7E924C0C00C00C53800
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 47
+    KIA_BRAKE_PEDAL_V2: 192
+    KIA_COMMANDED_GEAR_V2: 20
+    KIA_CURRENT_GEAR_V2: 4
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 1770
+    KIA_REL_APP: 18.03922
+    KIA_RPM_V2: 2125
+    KIA_TORQUE_CONVERTER_SLIP_V2: 13
+    KIA_TURBINE_SPEED_V2: 2114
+    KIA_VSS_7E1: 63
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E9210021343F372E21
+    7E922081BA85704A608
+    7E92334C245080414FF
+    7E924C0C00C00C53900
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 56
+    KIA_BRAKE_PEDAL_V2: 192
+    KIA_COMMANDED_GEAR_V2: 21
+    KIA_CURRENT_GEAR_V2: 4
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 2051
+    KIA_REL_APP: 22.35294
+    KIA_RPM_V2: 2453
+    KIA_TORQUE_CONVERTER_SLIP_V2: 10
+    KIA_TURBINE_SPEED_V2: 2447
+    KIA_VSS_7E1: 73
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921002654493F3926
+    7E9223C200C6004A608
+    7E92328C259080415FF
+    7E924C0C00C00C53800
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 52
+    KIA_BRAKE_PEDAL_V2: 192
+    KIA_COMMANDED_GEAR_V2: 19
+    KIA_CURRENT_GEAR_V2: 3
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 3317
+    KIA_REL_APP: 56.86275
+    KIA_RPM_V2: 5348
+    KIA_TORQUE_CONVERTER_SLIP_V2: 7
+    KIA_TURBINE_SPEED_V2: 5351
+    KIA_VSS_7E1: 118
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E92100539076FF9153
+    7E9229C33D45C064A08
+    7E9231CC1B2080313FF
+    7E924C0C00C00C53800
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 49
+    KIA_BRAKE_PEDAL_V2: 192
+    KIA_COMMANDED_GEAR_V2: 19
+    KIA_CURRENT_GEAR_V2: 3
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 3536
+    KIA_REL_APP: 99.21569
+    KIA_RPM_V2: 5706
+    KIA_TORQUE_CONVERTER_SLIP_V2: 9
+    KIA_TURBINE_SPEED_V2: 5703
+    KIA_VSS_7E1: 126
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E9210059287EFFFD59
+    7E9221C374059064A08
+    7E92324C1AA080313FF
+    7E924C0C00C00C53800
     7E92500000000000000
     7E92600AAAAAAAAAAAA
